# the-constitution-of-India-api

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
utils/: constants.py  documents_mng.py  pinecone_db_mng.py
