[project]
name = "Constitution-App-API"
version = "0.1.0"
description = "Backend api for Constitution RAG app."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-core>=0.3.75",
    "langchain-mistralai>=0.2.11",
    "langchain-pinecone>=0.2.11",
    "pinecone>=7.3.0",
    "pypdf>=6.0.0",
]
